--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,17 @@
  
 /* FONTS */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
+/* @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);*/
 
 /* OVERALL ASPECT */
 
+/* gris suave #f2f2f2 */
+/* gris fuerte #727378 */
+/* verde #61c11f */
+/* verde chillon #a9eb3f*/
+
 body {
-  background-color: #f2f2f2;
+    background-color: #fff;
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
@@ -23,12 +28,12 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
     
-    margin-top: 70px;
+    /*margin-top: 70px;*/
 }
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
+    font-family: "Lato";
     font-weight: 300;
     color: #333;
 }
@@ -129,20 +134,32 @@ a:after {
 /* hello */
 #hello {
 	width: 100%;
-	padding-top: 250px;
-	padding-bottom: 250px;
+	padding-top: 150px;
+	padding-bottom: 0px;
 }
 
 #hello h1 {
-	font-size: 90px;
-	font-weight: 700;
-	letter-spacing: 3px;
-	color: #74cfae;
+	font-size: 4em;
+	font-weight: 900;
+	letter-spacing: 0px;
+	color: #727378;
+    margin: 0px 0px 0px 0px;
 }
+
+#logo {
+    max-width: 23em;
+    width: 50%;
+    height: auto !important;
+}
+
+
 
 #hello h2 {
 	color: #c0c0c0;
 	font-weight: 400;
+    color: #61c11f;
+    margin: 0px 0px 0px 0px;
+    padding-left: 6.3em;
 }
 
 /* Green */
@@ -219,4 +236,21 @@ a:after {
 }
 .grid img:hover {
     opacity: 1;
+}
+
+
+
+.player {
+    position: absolute;
+    bottom: 2%;
+    right: 2%;
+}
+
+.jp-controls {
+    float:right;
+}
+
+.slider {
+    display: inline-block;
+    padding-top: 5px;
 }
